--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,29 @@
   </head>
 
   <body>
+  <header id="top" class="main-header">
+    <img src="assets/gaming-icon2.jpeg" alt="reddit-logo" class="main-header-logo">
+  <nav class="main-nav"> 
+    <a href="" class="hot-link main-nav-link">Hot</a>
+    <a href="" class="new-link main-nav-link">New</a>
+    <a href="" class="rising-link main-nav-link">Rising</a>
+    <a href="" class="controversial-link main-nav-link">Controversial</a>
+    <a href="" class="top-link main-nav-link">Top</a>
+    <a href="" class="gilded-link main-nav-link">Gilded</a>
+    <a href="" class="wiki-link main-nav-link">Wiki</a>
+  </nav>
+</header>
+
+<section class="hero">
+  <h2 class="hero-title">Welcome to Level Up</h2>
+  <h3 class="hero-subtitle">Ahead of the Game</h3>
+</section>
+
     <%= yield %>
+
   </body>
+
+  <footer class="main-footer">
+    <a href="#top" class = "main-footer-link">Back to top &raquo;</a>
+  </footer>
 </html>
