--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,28 +1,11 @@
-<body> 
-<header class="main-header">
-    <img src="assets/gaming-icon2.jpeg" alt="reddit-logo" class="main-header-logo">
-  <nav class="main-nav"> 
-    <a href="" class="hot-link main-nav-link">Hot</a>
-    <a href="" class="new-link main-nav-link">New</a>
-    <a href="" class="rising-link main-nav-link">Rising</a>
-    <a href="" class="controversial-link main-nav-link">Controversial</a>
-    <a href="" class="top-link main-nav-link">Top</a>
-    <a href="" class="gilded-link main-nav-link">Gilded</a>
-    <a href="" class="wiki-link main-nav-link">Wiki</a>
-  </nav>
-</header>
+<%= link_to "Games", games_path %>
 
-<main>
+<body> 
 
 <form class="search-bar">
   <input type="text" placeholder="Search..." required>
   <input type="button" value="Search">
 </form>
-
-<section class="hero">
-  <h2 class="hero-title">Welcome to Level Up</h2>
-  <h3 class="hero-subtitle">Ahead of the Game</h3>
-</section>
 
 <form action="#" method="GET" name="my_form" class="log-in-form">
     <fieldset>
@@ -98,9 +81,5 @@
         <p class="post-text">submitted by: shepard</p>  
       </div>
     </div>
-
-</main>
-
-
-</body>
+  </body>
 </html>
