Added Home & Posts link_to's on Main Naviagation pane

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -114,6 +114,7 @@
 
 .create-new-post, .link-to-show, .link-to-edit, .link-to-destroy {
 	color: #E51E23;
+	text-decoration: none;
 }
 
 /*********** Posts - Upvotes ***********/
