--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
-<%= link_to "Games Posts", posts_path %>
-
 <body> 
+
+<h1>This is my example/home page!</h1>
 
 <form class="search-bar">
   <input type="text" placeholder="Search..." required>
