--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 
   <body>
   <header id="top" class="main-header">
-    <img src="assets/gaming-icon2.jpeg" alt="reddit-logo" class="main-header-logo">
+  <%= image_tag("gaming-icon2.jpeg", alt: "reddit-logo", class: 'main-header-logo') %>   
   <nav class="main-nav"> 
     <%= link_to "Home", root_path, class: 'main-nav-link' %>
     <%= link_to "Posts", posts_path, class: 'main-nav-link' %>
