--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,6 +5,9 @@
 <body>
 <% @posts.each do |post| %>
     <div class="post">
+      <td><%= pluralize(post.votes.up.count - post.votes.down.count, "vote") %></td>
+      <td><%= button_to '+1', upvote_post_path(post), method: :post %></td>
+      <td><%= button_to '-1', downvote_post_path(post), method: :post %></td>
       <div class="">
         <div class="post-title">
           <h3><%= post.title %></h3>
