--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,15 +1,20 @@
-<p>
-  <b>Commenter:</b>
-  <%= comment.commenter %>
-</p>
- 
-<p>
-  <b>Comment:</b>
-  <%= comment.body %>
-</p>
 
-<p>
-  <%= link_to 'Destroy Comment', [comment.post, comment],
-               :confirm => 'Are you sure?',
-               :method => :delete %>
-</p>
+<div class="show-comment">
+  <p>
+    <b>Name:</b>
+    <%= comment.commenter %>
+  </p>
+  
+  <p>
+    <b>Comment:</b>
+    <%= comment.body %>
+  </p>
+
+
+  <p>
+    <%= link_to 'Destroy Comment', [comment.post, comment],
+                :confirm => 'Are you sure?',
+                :method => :delete, class: 'destroy-comment-link'%>
+  </p>
+
+</div>
