--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -14,7 +14,7 @@
   <p>
     <%= link_to 'Destroy Comment', [comment.post, comment],
                 :confirm => 'Are you sure?',
-                :method => :delete, class: 'destroy-comment-link'%>
+                :method => :delete, class: 'link-to'%>
   </p>
 
 </div>
