Tried adding images, can upload big image

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -186,7 +186,7 @@
 	color: #E51E23;
 }
 
-/************* Edit Posts Page **********/
+/************* New Posts Page **********/
 
 .new-post-headline {
 	color: #E51E23;
