--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -7,6 +7,7 @@
   <p>
     <%= @post.content %>
   </p>
+  <%= image_tag @post.image.url(:med)%>
 </div>
  
 <h2 class = "comments-headline">Comments</h2>
