--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -5,8 +5,8 @@
     <%= comment.commenter %>
   </p>
   
-Added:<%= time_ago_in_words(comment.created_at) %> ago<br>
- Added by: <%= current_user.username  %>
+  Added:<%= time_ago_in_words(comment.created_at) %> ago<br>
+  Added by: <%= comment.user&.username  %>
 
   <p>
     <b>Comment:</b>
