--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,17 +22,19 @@
     <a href="" class="wiki-link main-nav-link">Wiki</a>
   </nav>
 
-  <p class="navbar-text pull-right">
-<% if user_signed_in? %>
-  Logged in as <strong><%= current_user.username %></strong>.
-  <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
-  <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
-<% else %>
-  <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
-  <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
-<% end %>
-</p>
 </header>
+
+  <p class="user-navbar">
+    <% if user_signed_in? %>
+      Logged in as <strong class="user-navbar-username"><%= current_user.username %></strong>
+      <%= link_to 'Edit profile', edit_user_registration_path, class: "user-navbar-link" %> |
+      <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "user-navbar-link"  %>
+    <% else %>
+      <%= link_to "Sign up", new_user_registration_path, class: "user-navbar-link"  %> |
+      <%= link_to "Login", new_user_session_path, class: "user-navbar-link"  %>
+    <% end %>
+  </p>
+
 
 <section class="hero">
   <h2 class="hero-title">Welcome to Level Up</h2>
