--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -16,13 +16,15 @@
       </div>
       <div class="">
         <div class="post-title">
-          <h3><%= post.title %></h3>
+          <h3><%= post.title.truncate_words(7) %></h3>
         </div>
         <div class="post-content">
-          <%= post.content %>
+          <%= post.content.truncate_words(40) %>
+          <br>
+          <i>Added <%= time_ago_in_words(post.created_at) %> ago by <%= post.user&.username  %></i>
         </div>
       </div>
-			<div>
+			<div class="post-links">
 			<%= link_to 'Show', post, class: 'link-to-show' %>
 			<%= link_to 'Edit', edit_post_path(post), class: 'link-to-edit' %>
 			<%= link_to 'Delete', post, method: :delete, data: { confirm: 'Are you sure?' }, class: 'link-to-delete' %>
