--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
     <%= link_to "Home", root_path, class: 'main-nav-link' %>
     <%= link_to "Posts", posts_path, class: 'main-nav-link' %>
     <a href="" class="rising-link main-nav-link">Rising</a>
-    <a href="" class="controversial-link main-nav-link">Controversial</a>
+    <a href="" class="controversial main-nav-link">Controversial</a>
     <a href="" class="top-link main-nav-link">Top</a>
     <a href="" class="gilded-link main-nav-link">Gilded</a>
     <a href="" class="wiki-link main-nav-link">Wiki</a>
