--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,3 @@
-
 <div class="show-comment">
 
   <p>
@@ -10,7 +9,7 @@
   <p>
     <%= link_to 'Destroy Comment', [comment.post, comment],
                 :confirm => 'Are you sure?',
-                :method => :delete, class: 'link-to'%>
+                :method => :delete, class: 'link-to-destroy-comment'%>
   </p>
 
 </div>
