--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,4 +1,4 @@
-<h2>Forgot your password?</h2>
+<h2 class="forgot-password-headline">Forgot your password?</h2>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= devise_error_messages! %>
@@ -8,9 +8,16 @@
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
 
+<br>
+
   <div class="actions">
     <%= f.submit "Send me reset password instructions" %>
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<br>
+
+<%= link_to "Sign up for a new account", new_user_registration_path, class: "forgot-password-link-to-sign-up"  %> |
+
+<%= link_to "Back to log in page", new_user_session_path, class: "forgot-password-link-to-log-in"  %>
+
