--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,6 @@
-<h1 class = "edit-page-headline">Edit Your Post Below</h1>
+<h1 class = "edit-post-headline">Edit Your Post Below</h1>
 
 <%= render 'form', post: @post %>
 
-<%= link_to 'Show', @post, class: "link-to" %> |
-<%= link_to 'Back', posts_path, class: "link-to" %>
+<%= link_to 'Back to post', @post, class: "edit-post-link-to-back-to-post" %> |
+<%= link_to 'Back to homepage', posts_path, class: "edit-post-link-to-back-to-homepage" %>
