--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,34 +1,33 @@
 <p id="notice"><%= notice %></p>
 
-<h2><%= link_to 'Click Here To Create A New Post', new_post_path, class: 'create-new-post' %></h2>
+<h2><%= link_to 'Click Here To Create A New Post', new_post_path, class: 'link-to-create-new-post' %></h2>
 
 <body>
-
-<% @posts.each do |post| %>
-    <div class="post">
-      <div class="post-upvotes">
-        <%= button_to '▲', upvote_post_path(post), method: :post, class: 'post-upvote', remote: true %>
-        <span id="votes-<%=post.id%>"><%= (post.votes.up.count - post.votes.down.count) %></span>
-        <%= button_to '▼', downvote_post_path(post), method: :post, class: 'post-downvote', remote: true %>
-      </div>
-      <div>
-        <%= image_tag post.image.url(:thumb) %>
-      </div>
-      <div class="">
-        <div class="post-title">
-          <h3><%= post.title.truncate_words(7) %></h3>
+  <% @posts.each do |post| %>
+      <div class="post">
+        <div class="post-upvotes">
+          <%= button_to '▲', upvote_post_path(post), method: :post, class: 'post-upvote', remote: true %>
+          <span id="votes-<%=post.id%>"><%= (post.votes.up.count - post.votes.down.count) %></span>
+          <%= button_to '▼', downvote_post_path(post), method: :post, class: 'post-downvote', remote: true %>
         </div>
-        <div class="post-content">
-          <%= post.content.truncate_words(40) %>
-          <br><br>
-          <i>Added <%= time_ago_in_words(post.created_at) %> ago by <%= post.user&.username  %></i>
+        <div>
+          <%= image_tag post.image.url(:thumb) %>
+        </div>
+        <div class="">
+          <div class="post-title">
+            <h3><%= post.title.truncate_words(7) %></h3>
+          </div>
+          <div class="post-content">
+            <%= post.content.truncate_words(40) %>
+            <br><br>
+            <i>Added <%= time_ago_in_words(post.created_at) %> ago by <%= post.user&.username  %></i>
+          </div>
+        </div>
+        <div class="post-links">
+          <%= link_to 'Show', post, class: 'link-to-show' %>
+          <%= link_to 'Edit', edit_post_path(post), class: 'link-to-edit' %>
+          <%= link_to 'Delete', post, method: :delete, data: { confirm: 'Are you sure?' }, class: 'link-to-delete' %>
         </div>
       </div>
-			<div class="post-links">
-			<%= link_to 'Show', post, class: 'link-to-show' %>
-			<%= link_to 'Edit', edit_post_path(post), class: 'link-to-edit' %>
-			<%= link_to 'Delete', post, method: :delete, data: { confirm: 'Are you sure?' }, class: 'link-to-delete' %>
-			</div>
-		</div>
-<% end %>
+  <% end %>
 </body>
