--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', post: @post %>
 
-<%= link_to 'Back', posts_path, class: "link-to" %>
+<%= link_to 'Back to homepage', posts_path, class: "new-post-link-to-back-to-homepage" %>
